--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^0.1.2
+  video_player: ^0.10.0+8
+  chewie: ^0.9.7
 
 dev_dependencies:
   flutter_test:
