add data dummy and video dummy

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,3 +29,5 @@ flutter:
     - assets/ic_referee.png
     - assets/ic_rules.png
     - assets/ic_strategy.png
+    - assets/ic_cover_sejarah.jpg
+    - assets/video_sample.mp4
